--- a/connector/application.yml
+++ b/connector/application.yml
@@ -4,10 +4,10 @@ log:
   level: DEBUG
 db:
   redis:
-    addr: 127.0.0.1:6379
+    addr: 119.28.81.104:6379
     poolSize: 10
     minIdleConns: 1
-    password:
+    password: CAW7qv1i0Pss
 jwt:
   secret: 123456
   exp: 7
